# dota2-ai-coach

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/dota2-coach/: SKILL.md
fixtures/: sample_gsi.json
gsi/: gamestate_integration_coach.cfg
prompts/: polling.md  system.md  voice.md
scripts/: install-gsi.ps1  uninstall-all.ps1  uninstall-gsi.ps1
src/dota2_coach/: __main__.py  config.py  gsi_http.py  opendota.py  server.py  state.py
src/dota2_coach/voice/: listen.py  speak.py
tests/: smoke.py  tts_smoke.py  voice_debug.py  whisper_load.py
