[project]
name = "dota2-coach"
version = "0.1.0"
description = "Dota 2 AI Coach MCP server with GSI, OpenDota, and voice I/O"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "faster-whisper>=1.0.3",
    "sounddevice>=0.5.0",
    "numpy>=1.26",
    "edge-tts>=6.1.12",
    "silero-vad>=5.1",
    "torch>=2.2",
    "miniaudio>=1.61",
]

[project.scripts]
dota2-coach = "dota2_coach.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dota2_coach"]

[dependency-groups]
dev = []
